<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">my voice</string>
	<string name="editBoxHint">What\'s happening?</string>
	<string name="license">DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE \nVersion 2, December 2004\n\n
Copyright (C) 2004 Sam Hocevar sam@hocevar.net\n\n
Everyone is permitted to copy and distribute verbatim or modified copies of this license document, and changing it is allowed as long as the name is changed.\n\n
DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION\n\n
0. You just DO WHAT THE FUCK YOU WANT TO.</string>
	<string name="about">Thanks for using MyVoice.\nDeveloped by Manuel Wildauer.\n\nFeel free to fork, modify and have fun with it :)</string>
	
	<!-- Preferences //-->
	
	<string name="categoryLocaleTitle">Locale</string>
	<string name="categoryPitchASpeedTitle">Pitch and speed</string>
	<string name="categorySaveTitle">Save</string>
	<string name="categoryShareTitle">Share</string>
	<string name="categoryAboutTitle">About</string>
	
	<string name="localeTitle">Set locale</string>
	<string name="localeSummary">Switch between locales</string>
	
	<string name="pitchTitle">Set pitch</string>
	<string name="pitchSummary">The pitch. 1 is the normal pitch, lower values lower the tone of the synthesized voice, greater values increase it.</string>
	
	<string name="speechRate">Set speech rate</string>
	<string name="speechSummary">The speech rate. 1 is the normal speed, lower values slow down the speech (0.5 is half the normal speech rate), greater values accelerate it .</string>
	
	<string name="saveTitle">Save as audio?</string>
	<string name="saveSummaryOn">Save to /sdcard/myvoice/</string>
	<string name="saveSummaryOff">Save to sdcard?</string>
	
	<string name="shareTitle">Ask for sharing?</string>
	<string name="shareSummaryOn">Ask</string>
	<string name="shareSummaryOff">Dont ask</string>
	
	<string name="aboutTitle">About myvoice</string>
	<string name="aboutSummary"></string>
	
	<string name="licenseTitle">License</string>
	<string name="licenseSummary">DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE</string>
	
	<!-- Links //-->
	<string name="twitter">http://www.twitter.com/manuw</string>
	<string name="github">https://github.com/manuw/MyVoice</string>
	<string name="faenza">http://tiheum.deviantart.com/art/Faenza-Icons-173323228</string>
</resources>
